--- a/arch/arm64/configs/a6plte_sea_open_defconfig
+++ b/arch/arm64/configs/a6plte_sea_open_defconfig
@@ -166,7 +166,7 @@ CONFIG_BLK_DEV_INITRD=y
 CONFIG_INITRAMFS_SOURCE=""
 CONFIG_RD_GZIP=y
 # CONFIG_RD_BZIP2 is not set
-# CONFIG_RD_LZMA is not set
+CONFIG_RD_LZMA=y
 # CONFIG_RD_XZ is not set
 # CONFIG_RD_LZO is not set
 # CONFIG_RD_LZ4 is not set
@@ -1413,10 +1413,10 @@ CONFIG_DM_REQ_CRYPT=y
 # CONFIG_DM_DELAY is not set
 CONFIG_DM_UEVENT=y
 # CONFIG_DM_FLAKEY is not set
-CONFIG_DM_VERITY=y
+# CONFIG_DM_VERITY is not set
 # CONFIG_DM_VERITY_HASH_PREFETCH_MIN_SIZE_128 is not set
-CONFIG_DM_VERITY_HASH_PREFETCH_MIN_SIZE=1
-CONFIG_DM_ANDROID_VERITY_AT_MOST_ONCE_DEFAULT_ENABLED=y
+# CONFIG_DM_VERITY_HASH_PREFETCH_MIN_SIZE is not set
+# CONFIG_DM_ANDROID_VERITY_AT_MOST_ONCE_DEFAULT_ENABLED is not set
 # CONFIG_DM_VERITY_FEC is not set
 # CONFIG_DM_SWITCH is not set
 # CONFIG_DM_LOG_WRITES is not set
@@ -2505,7 +2505,7 @@ CONFIG_WATCHDOG_CORE=y
 #
 # Watchdog Device Drivers
 #
-CONFIG_SOFT_WATCHDOG=y
+# CONFIG_SOFT_WATCHDOG is not set
 # CONFIG_GPIO_WATCHDOG is not set
 # CONFIG_XILINX_WATCHDOG is not set
 # CONFIG_ARM_SP805_WATCHDOG is not set
@@ -3645,8 +3645,8 @@ CONFIG_USB_F_IPC=y
 CONFIG_USB_G_ANDROID=y
 CONFIG_USB_ANDROID_SAMSUNG_COMPOSITE=y
 CONFIG_USB_DUN_SUPPORT=y
-CONFIG_USB_ANDROID_SAMSUNG_MTP=y
-CONFIG_USB_F_CONN_GADGET_NDOP=y
+# CONFIG_USB_ANDROID_SAMSUNG_MTP is not set
+# CONFIG_USB_F_CONN_GADGET_NDOP is not set
 CONFIG_USB_ANDROID_SAMSUNG_SIDESYNC=y
 # CONFIG_USB_LOCK_SUPPORT_FOR_MDM is not set
 # CONFIG_USB_RNDIS_VZW_REQ is not set
@@ -4959,10 +4959,7 @@ CONFIG_SECURITY_SELINUX_CHECKREQPROT_VALUE=1
 # CONFIG_SECURITY_TOMOYO is not set
 # CONFIG_SECURITY_APPARMOR is not set
 # CONFIG_SECURITY_YAMA is not set
-CONFIG_INTEGRITY=y
-CONFIG_INTEGRITY_SIGNATURE=y
-CONFIG_INTEGRITY_ASYMMETRIC_KEYS=y
-CONFIG_INTEGRITY_AUDIT=y
+# CONFIG_INTEGRITY is not set
 # CONFIG_IMA is not set
 # CONFIG_EVM is not set
 
@@ -4976,14 +4973,14 @@ CONFIG_INTEGRITY_AUDIT=y
 # KNOX_TEST
 #
 # CONFIG_KNOX_TEST is not set
-CONFIG_SECURITY_DEFEX=y
+# CONFIG_SECURITY_DEFEX is not set
 # CONFIG_DEFEX_KERNEL_ONLY is not set
 CONFIG_PROCA=y
 # CONFIG_GAF_V3 is not set
 # CONFIG_GAF_V4 is not set
 # CONFIG_GAF_V5 is not set
 CONFIG_GAF_V6=y
-CONFIG_SECURITY_DSMS=y
+# CONFIG_SECURITY_DSMS is not set
 CONFIG_FIVE=y
 # CONFIG_FIVE_DEBUG is not set
 CONFIG_FIVE_CERT_USER="x509_five_user.der"
@@ -5046,7 +5043,7 @@ CONFIG_CRYPTO_XTS=y
 #
 # Hash modes
 #
-# CONFIG_CRYPTO_CMAC is not set
+CONFIG_CRYPTO_CMAC=y
 CONFIG_CRYPTO_HMAC=y
 CONFIG_CRYPTO_XCBC=y
 # CONFIG_CRYPTO_VMAC is not set
@@ -5171,6 +5168,7 @@ CONFIG_LZ4_DECOMPRESS=y
 # CONFIG_XZ_DEC is not set
 # CONFIG_XZ_DEC_BCJ is not set
 CONFIG_DECOMPRESS_GZIP=y
+CONFIG_DECOMPRESS_LZMA=y
 CONFIG_GENERIC_ALLOCATOR=y
 CONFIG_REED_SOLOMON=y
 CONFIG_REED_SOLOMON_ENC8=y
